<resources>
    <string name="app_name">SimplePlayer</string>

    <string name="string_welcome">Welcome to Simple Player</string>

    <string name="btn_local_list">本地列表</string>
    <string name="btn_audio_list">歌单列表</string>
    <string name="btn_timer">定时功能</string>

    <string name="audio_show_list_title">歌单列表</string>
    <string name="audio_show_list_new">新建</string>
    <string name="audio_show_list_delete">删除</string>
    <string name="audio_show_add_list_ask">请输入想要生成的歌单名称：</string>
    <string name="audio_show_list_succeed">歌单 %1$s 创建成功</string>
    <string name="audio_show_list_existed">歌单已存在,创建失败</string>
    <string name="audio_show_unit">%1$d 首</string>

    <string name="yes">确定</string>
    <string name="no">取消</string>

    <string name="audio_list_edit">编辑</string>
    <string name="audio_list_edit_completed">保存</string>
    <string name="audio_list_delete">删除</string>
    <string name="audio_list_choose_all">全选</string>
    <string name="audio_list_cover">覆盖到播放列表</string>


    <string name="play_list_title">播放列表</string>
    <string name="play_list_edit">编辑</string>
    <string name="play_list_edit_completed">保存</string>
    <string name="play_list_delete">删除</string>
    <string name="play_list_choose_all">全选</string>

    <string name="local_list_title">本地音乐列表</string>
    <string name="local_list_search">搜索本地音乐</string>
    <string name="local_list_search_cancel">停止搜索</string>
    <string name="local_list_edit">编辑</string>
    <string name="local_list_edit_completed">完成</string>
    <string name="local_list_delete">删除</string>
    <string name="local_list_add">加入到左边</string>
    <string name="local_list_choose_all">全选</string>


    <string name="alarm_list_title">定时功能</string>
    <string name="alarm_list_play">定时播放</string>
    <string name="alarm_list_time">播放时间</string>
    <string name="alarm_list_date">重复播放</string>
    <string name="alarm_list_audios">播放歌单</string>
    <string name="alarm_list_stop">定时停止</string>
    <string name="alarm_save_ask">有未保存的修改，是否保存</string>

    <string name="clock_msg_ring">设定时间已到，现在为您播放歌单：%1$s</string>
    <string name="clock_msg_no_music">设定时间已到，但是歌单："%1$s" 没有音乐</string>
    <string name="clock_timer_finish">倒计时结束，停止播放音乐</string>


</resources>
