<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yanzhikai.simpleplayer.ui.LocalAudioListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_play_list_bar">

        <ImageView
            android:layout_width="@dimen/back_btn_width"
            android:layout_height="@dimen/back_btn_height"
            android:layout_centerVertical="true"
            android:src="@mipmap/back_right"
            android:layout_marginStart="@dimen/back_btn_margin"
            android:background="@drawable/background_btn"
            android:id="@+id/iv_back" />

        <TextView
            android:id="@+id/tv_playlist_title"
            style="@style/AudioListTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/list_title_margin"
            android:text="@string/local_list_title" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_delete"
            android:background="@drawable/background_btn"
            android:text="@string/local_list_add" />

        <TextView
            android:id="@+id/tv_delete"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_choose_all"
            android:background="@drawable/background_btn"
            android:text="@string/local_list_delete"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_choose_all"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_edit"
            android:background="@drawable/background_btn"
            android:text="@string/local_list_choose_all"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_search"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_edit"
            android:background="@drawable/background_btn"
            android:text="@string/local_list_search" />

        <ProgressBar
            android:id="@+id/pb_search"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tv_edit"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_btn"
            android:text="@string/local_list_edit" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_local_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:translationZ="5dp">
    </android.support.v7.widget.RecyclerView>


</LinearLayout>
