<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yanzhikai.simpleplayer.ui.PlayListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_bar_height"
        android:background="@drawable/background_play_list_bar"
        >



        <TextView
            android:id="@+id/tv_playlist_title"
            style="@style/AudioListTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_delete"
            android:layout_marginStart="@dimen/list_title_margin"
            android:layout_centerVertical="true"
            android:text="@string/play_list_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delete"
            android:visibility="invisible"
            android:layout_marginEnd="20dp"
            android:text="@string/play_list_delete"
            android:background="@drawable/background_btn"
            style="@style/AudioListEditText"
            android:layout_toStartOf="@+id/tv_choose_all"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_choose_all"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_edit"
            android:background="@drawable/background_btn"
            android:text="@string/play_list_choose_all"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_edit"
            android:layout_marginEnd="20dp"
            android:text="@string/play_list_edit"
            android:background="@drawable/background_btn"
            style="@style/AudioListEditText"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_play_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:translationZ="5dp">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>