<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/background_play_list_bar"
        >
        <ImageView
            android:layout_width="@dimen/back_btn_width"
            android:layout_height="@dimen/back_btn_height"
            android:layout_centerVertical="true"
            android:src="@mipmap/back_left"
            android:layout_marginStart="@dimen/back_btn_margin"
            android:background="@drawable/background_btn"
            android:id="@+id/iv_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_audio_list_title"
            android:layout_margin="@dimen/list_title_margin"
            style="@style/AudioListTitleText"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delete"
            android:visibility="invisible"
            android:layout_marginEnd="20dp"
            android:text="@string/audio_list_delete"
            android:background="@drawable/background_btn"
            style="@style/AudioListEditText"
            android:layout_toStartOf="@+id/tv_choose_all"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_cover"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_edit"
            android:background="@drawable/background_btn"
            android:text="@string/audio_list_cover"
             />

        <TextView
            android:id="@+id/tv_choose_all"
            style="@style/AudioListEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/tv_edit"
            android:background="@drawable/background_btn"
            android:text="@string/audio_list_choose_all"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_edit"
            android:layout_marginEnd="20dp"
            android:text="@string/audio_list_edit"
            android:background="@drawable/background_btn"
            style="@style/AudioListEditText"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_play_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:translationZ="5dp">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>